--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 django = "^5.1"
+python-dotenv = "^1.0.1"
+requests = "^2.32.3"
+djangorestframework = "^3.15.2"
 
 
 [build-system]
